Minor changes: Change 'TBA' to 'Akan diumumkan' or 'To Be Announced'

--- a/jadwal.html
+++ b/jadwal.html
@@ -4,10 +4,4 @@ title: Jadwal Kegiatan OSN Informatika 2019 (Tentatif)
 key: schedule
 ---
 
-<p>Panduan kegiatan OSN dapat diunduh <a href="assets/files/panduan.pdf">di sini</a>.</p>
-
-<hr />
-
-<table class="pt-html-table pt-html-table-bordered">
-    <thead></thead><tbody></tbody>
-</table>
+Akan diumumkan
