Add OSN 2019 contestants

--- a/peserta.html
+++ b/peserta.html
@@ -5,6 +5,84 @@ key: contestants
 ---
 
 <table class="pt-html-table pt-html-table-bordered" style="font-size: 11px;">
-    <thead></thead>
-    <tbody></tbody>
+  <thead>
+    <tr><th>NO.</th><th>NAMA</th><th>L/P</th><th>KLS</th><th>ASAL SEKOLAH</th><th>PROVINSI</th></tr>
+  </thead>
+  <tbody>
+    <tr><td>1</td><td>AMANDA NURUL IZZAH</td><td>P</td><td>10</td><td>SMA TEUKU NYAK ARIF FATIH BILINGUAL SCHOOL</td><td>ACEH</td></tr>
+    <tr><td>2</td><td>MUHAMMAD HAMLUL KHAIR</td><td>L</td><td>11</td><td>SMAN MODAL BANGSA ACEH</td><td>ACEH</td></tr>
+    <tr><td>3</td><td>SULTHAN AFIF ALTHAF</td><td>L</td><td>11</td><td>SMAN MODAL BANGSA ACEH</td><td>ACEH</td></tr>
+    <tr><td>4</td><td>ANAK AGUNG NGURAH ANDHIKA SATRYA NUGRAHA</td><td>L</td><td>11</td><td>SMAN 1 DENPASAR</td><td>BALI</td></tr>
+    <tr><td>5</td><td>JUSTIN ANDHIKA CHANDRA</td><td>L</td><td>11</td><td>SMAN 1 SINGARAJA</td><td>BALI</td></tr>
+    <tr><td>6</td><td>WILLIAM OWEN GOZALI</td><td>L</td><td>10</td><td>SMA BRITISH SCHOOL JAKARTA</td><td>BANTEN</td></tr>
+    <tr><td>7</td><td>THEOPHILUS JOSEPH WAHYUDI</td><td>L</td><td>11</td><td>SMA SANTA LAURENSIA</td><td>BANTEN</td></tr>
+    <tr><td>8</td><td>FAEGAN LEMUEL DAVLYSON</td><td>L</td><td>11</td><td>SMAK PENABUR GADING SERPONG</td><td>BANTEN</td></tr>
+    <tr><td>9</td><td>GREGORIUS BHISMA</td><td>L</td><td>11</td><td>SMAN 2 KOTA TANGERANG SELATAN</td><td>BANTEN</td></tr>
+    <tr><td>10</td><td>FADLI DWI RAMADHAN</td><td>L</td><td>10</td><td>SMAIT IQRA' KOTA BENGKULU</td><td>BENGKULU</td></tr>
+    <tr><td>11</td><td>DANINDRA ARIO WIRYAWAN</td><td>L</td><td>10</td><td>SMAN 1 YOGYAKARTA</td><td>DAERAH ISTIMEWA YOGYAKARTA</td></tr>
+    <tr><td>12</td><td>MIRZA SAFARAZ</td><td>L</td><td>11</td><td>SMAN 1 YOGYAKARTA</td><td>DAERAH ISTIMEWA YOGYAKARTA</td></tr>
+    <tr><td>13</td><td>RAMA ARYASUTA PANGESTU</td><td>L</td><td>10</td><td>SMA KANISIUS JAKARTA</td><td>DKI JAKARTA</td></tr>
+    <tr><td>14</td><td>YOHANDI</td><td>L</td><td>11</td><td>SMAK 1 BPK PENABUR JAKARTA</td><td>DKI JAKARTA</td></tr>
+    <tr><td>15</td><td>KEVIN JONATHAN KUSNOMO</td><td>L</td><td>9</td><td>SMAK 5 BPK PENABUR JAKARTA</td><td>DKI JAKARTA</td></tr>
+    <tr><td>16</td><td>NABIL IBADURRAHMAN ERVATRA</td><td>L</td><td>9</td><td>SMPN 115 JAKARTA</td><td>DKI JAKARTA</td></tr>
+    <tr><td>17</td><td>AHMAD RAMADHAN</td><td>L</td><td>11</td><td>MAN INSAN CENDEKIA GORONTALO</td><td>GORONTALO</td></tr>
+    <tr><td>18</td><td>NABIL MUHAMMAD AZZAM</td><td>L</td><td>11</td><td>MAN INSAN CENDEKIA GORONTALO</td><td>GORONTALO</td></tr>
+    <tr><td>19</td><td>RICHIE CHRISTIANSEN SENLIA</td><td>L</td><td>11</td><td>SMA XAVERIUS 1 JAMBI</td><td>JAMBI</td></tr>
+    <tr><td>20</td><td>FATIH MAHAWISESA</td><td>L</td><td>11</td><td>SMAN 1 SUNGAI PENUH</td><td>JAMBI</td></tr>
+    <tr><td>21</td><td>BANABIL FAWAZAIM MUHAMMAD</td><td>L</td><td>11</td><td>SMA CAHAYA RANCAMAYA IBS</td><td>JAWA BARAT</td></tr>
+    <tr><td>22</td><td>MUHAMMAD HALIF</td><td>L</td><td>11</td><td>SMAN 1 DEPOK</td><td>JAWA BARAT</td></tr>
+    <tr><td>23</td><td>MUHAMMAD KENSHIN HIMURA MAHMUDDIN</td><td>L</td><td>11</td><td>SMAN 1 KOTA BOGOR</td><td>JAWA BARAT</td></tr>
+    <tr><td>24</td><td>MUHAMMAD ARIF NURIMAN</td><td>L</td><td>11</td><td>SMAN 5 BEKASI</td><td>JAWA BARAT</td></tr>
+    <tr><td>25</td><td>PIKATAN ARYA BRAMAJATI</td><td>L</td><td>10</td><td>SMA SEMESTA BBS SEMARANG</td><td>JAWA TENGAH</td></tr>
+    <tr><td>26</td><td>MUHAMMAD MALIK ADITYA KURNIAWAN</td><td>L</td><td>11</td><td>SMA TARUNA NUSANTARA</td><td>JAWA TENGAH</td></tr>
+    <tr><td>27</td><td>RAHADIAN PANJI RAMADHAN</td><td>L</td><td>11</td><td>SMAN 1 PURWOKERTO</td><td>JAWA TENGAH</td></tr>
+    <tr><td>28</td><td>YUMNA AQILA RASYIDAH</td><td>P</td><td>11</td><td>SMAN 2 PURWOKERTO</td><td>JAWA TENGAH</td></tr>
+    <tr><td>29</td><td>MARKUS LEONARD WIJAYA</td><td>L</td><td>11</td><td>SMAN 3 SEMARANG</td><td>JAWA TENGAH</td></tr>
+    <tr><td>30</td><td>GWYNETH GUO BAI LING</td><td>P</td><td>10</td><td>SMA KRISTEN INTAN PERMATA HATI</td><td>JAWA TIMUR</td></tr>
+    <tr><td>31</td><td>STEVEN ADRIAN GRACIA</td><td>L</td><td>10</td><td>SMA KRISTEN PETRA 1 SURABAYA</td><td>JAWA TIMUR</td></tr>
+    <tr><td>32</td><td>HANIIF AHMAD JAUHARI</td><td>L</td><td>11</td><td>SMAN 1 SOOKO</td><td>JAWA TIMUR</td></tr>
+    <tr><td>33</td><td>MUHAMMAD IQBAL ASRIF</td><td>L</td><td>11</td><td>SMAN 3 MALANG</td><td>JAWA TIMUR</td></tr>
+    <tr><td>34</td><td>JUAN CARLO VIERI</td><td>L</td><td>8</td><td>SMP KRISTEN INTAN PERMATA HATI</td><td>JAWA TIMUR</td></tr>
+    <tr><td>35</td><td>MAXIMILLIANO UTOMO QUOK</td><td>L</td><td>9</td><td>SMP XIN ZHONG SCHOOL</td><td>JAWA TIMUR</td></tr>
+    <tr><td>36</td><td>STEVEN NOVARYO</td><td>L</td><td>11</td><td>SMA KATOLIK SANTU PETRUS PONTIANAK</td><td>KALIMANTAN BARAT</td></tr>
+    <tr><td>37</td><td>DWI RANGGA RHADITYA SIWI WIDODO</td><td>L</td><td>11</td><td>SMAN 1 PONTIANAK</td><td>KALIMANTAN BARAT</td></tr>
+    <tr><td>38</td><td>AHMAD.MUDHIYA ANANTA RAHMAN</td><td>L</td><td>11</td><td>MAN INSAN CENDEKIA</td><td>KALIMANTAN SELATAN</td></tr>
+    <tr><td>39</td><td>NOVERDI ANUGRAH RAMADHAN</td><td>L</td><td>11</td><td>SMAN 1 SATUI</td><td>KALIMANTAN SELATAN</td></tr>
+    <tr><td>40</td><td>CANGNAI FANG</td><td>P</td><td>11</td><td>SMAN 7 BANJARMAIN</td><td>KALIMANTAN SELATAN</td></tr>
+    <tr><td>41</td><td>REZA ALI NIRWANSYAH</td><td>L</td><td>10</td><td>SMAN 1 PANGKALAN BUN</td><td>KALIMANTAN TENGAH</td></tr>
+    <tr><td>42</td><td>AKMAL HAMDALAH BANAWATA</td><td>L</td><td>11</td><td>MAN INSAN CENDEKIA PASER</td><td>KALIMANTAN TIMUR</td></tr>
+    <tr><td>43</td><td>HAFIZHA ULINNUHA AHMAD</td><td>L</td><td>11</td><td>SMA YAYASAN PUPUK KALTIM</td><td>KALIMANTAN TIMUR</td></tr>
+    <tr><td>44</td><td>KAUSAR MEUTUWAH</td><td>L</td><td>10</td><td>SMA YPVDP BONTANG</td><td>KALIMANTAN TIMUR</td></tr>
+    <tr><td>45</td><td>MUHAMMAD ZHAFRAN AMMAR</td><td>L</td><td>11</td><td>SMAN 2 TARAKAN</td><td>KALIMANTAN UTARA</td></tr>
+    <tr><td>46</td><td>BONAVENTURA GALANG KRISTABEL ANGIPANGLIPUR HATMASASMITA</td><td>L</td><td>10</td><td>SMA SANTO YOSEF PANGKALPINANG</td><td>KEPULAUAN BANGKA BELITUNG</td></tr>
+    <tr><td>47</td><td>MUSTOFA KAMAL</td><td>L</td><td>11</td><td>SMAN 1 TANJUNGPANDAN</td><td>KEPULAUAN BANGKA BELITUNG</td></tr>
+    <tr><td>48</td><td>TAN CAKEN</td><td>L</td><td>11</td><td>SMAK YOS SUDARSO BATAM</td><td>KEPULAUAN RIAU</td></tr>
+    <tr><td>49</td><td>HAFIZH ABIYANIQBAL HARAHAP</td><td>L</td><td>11</td><td>SMAN 1 BATAM</td><td>KEPULAUAN RIAU</td></tr>
+    <tr><td>50</td><td>AFIF SYAIFULLAH FATTAH</td><td>L</td><td>11</td><td>SMA AL KAUTSAR BANDAR LAMPUNG</td><td>LAMPUNG</td></tr>
+    <tr><td>51</td><td>YOHANES PANDU KILANG EWANG EWANG</td><td>L</td><td>11</td><td>SMAN 1 METRO</td><td>LAMPUNG</td></tr>
+    <tr><td>52</td><td>TIARA FIRGISHANDA IPAENIN</td><td>P</td><td>11</td><td>SMAN 2 MAOHI</td><td>MALUKU</td></tr>
+    <tr><td>53</td><td>ZIKRU AKBAR ISNAIN</td><td>L</td><td>11</td><td>SMAN 8 KOTA TERNATE</td><td>MALUKU UTARA</td></tr>
+    <tr><td>54</td><td>DWIMA AGUS NURCAHYA PUTRA</td><td>L</td><td>11</td><td>SMAN 1 TANJUNG</td><td>NUSA TENGGARA BARAT</td></tr>
+    <tr><td>55</td><td>PUTU ANDHIKA PRATAMA</td><td>L</td><td>11</td><td>SMAN 3 KUPANG</td><td>NUSA TENGGARA TIMUR</td></tr>
+    <tr><td>56</td><td>UMAR WIRA HADI ASPAR AMINI</td><td>L</td><td>10</td><td>SMAN 2 JAYAPURA</td><td>PAPUA</td></tr>
+    <tr><td>57</td><td>ARDI CAESAR KURNIAWAN</td><td>L</td><td>11</td><td>SMA SAINS AVEROS</td><td>PAPUA BARAT</td></tr>
+    <tr><td>58</td><td>YUSUF ILHAM</td><td>L</td><td>11</td><td>MAN 2 PEKANBARU</td><td>RIAU</td></tr>
+    <tr><td>59</td><td>FADHIL ALDITO PUTRA</td><td>L</td><td>10</td><td>SMAN 8 PEKANBARU</td><td>RIAU</td></tr>
+    <tr><td>60</td><td>M. ALDY AINUR AHMAD</td><td>L</td><td>11</td><td>SMAN 1 POLEWALI</td><td>SULAWESI BARAT</td></tr>
+    <tr><td>61</td><td>JOHANN CHRISTIAN KANDANI</td><td>L</td><td>10</td><td>SMA KATOLIK RAJAWALI MAKASSAR</td><td>SULAWESI SELATAN</td></tr>
+    <tr><td>62</td><td>VINSEN NAWIR</td><td>L</td><td>11</td><td>SMA KATOLIK RAJAWALI MAKASSAR</td><td>SULAWESI SELATAN</td></tr>
+    <tr><td>63</td><td>EKASARI AMALIA</td><td>P</td><td>11</td><td>SMA AL AZHAR MANDIRI PALU</td><td>SULAWESI TENGAH</td></tr>
+    <tr><td>64</td><td>JUBRIL BIRUNI PAMBOKE</td><td>L</td><td>11</td><td>SMAN 4 KENDARI</td><td>SULAWESI TENGGARA</td></tr>
+    <tr><td>65</td><td>KENNETH NICHOLAS MAMAHIT</td><td>L</td><td>10</td><td>SMA KRISTEN EBEN HAEZAR MANADO</td><td>SULAWESI UTARA</td></tr>
+    <tr><td>66</td><td>WILLIAM ALEXANDER TANEX</td><td>L</td><td>11</td><td>SMA KRISTEN EBEN HAEZAR MANADO</td><td>SULAWESI UTARA</td></tr>
+    <tr><td>67</td><td>ANDREW CHRISTIAN JUBINTORO</td><td>L</td><td>11</td><td>SMA MANADO INDEPENDENT SCHOOL</td><td>SULAWESI UTARA</td></tr>
+    <tr><td>68</td><td>MUHAMMAD ZIKRI RAMADHAN</td><td>L</td><td>10</td><td>SMAN 1 PADANG</td><td>SUMATERA BARAT</td></tr>
+    <tr><td>69</td><td>MUHAMMAD HABIBI HUSNI</td><td>L</td><td>10</td><td>SMAN 2 PAYAKUMBUH</td><td>SUMATERA BARAT</td></tr>
+    <tr><td>70</td><td>VIO ALBERT FERDINAND</td><td>L</td><td>11</td><td>SMA IGNATIUS GLOBAL SCHOOL PALEMBANG</td><td>SUMATERA SELATAN</td></tr>
+    <tr><td>71</td><td>WESLEY SUSANTO</td><td>L</td><td>11</td><td>SMA IGNATIUS GLOBAL SCHOOL PALEMBANG</td><td>SUMATERA SELATAN</td></tr>
+    <tr><td>72</td><td>RHEZA RIZQULLAH ECALDY</td><td>L</td><td>11</td><td>SMA KUSUMA BANGSA PALEMBANG</td><td>SUMATERA SELATAN</td></tr>
+    <tr><td>73</td><td>AMELIA TANWIJAYA</td><td>P</td><td>11</td><td>SMA METHODIST 2 MEDAN</td><td>SUMATERA UTARA</td></tr>
+    <tr><td>74</td><td>EDBERT GERALDY CANGDINATA</td><td>L</td><td>10</td><td>SMA SUTOMO 1 MEDAN</td><td>SUMATERA UTARA</td></tr>
+    <tr><td>75</td><td>MUHAMMAD FAUZUL AKBAR</td><td>L</td><td>11</td><td>SMA UNGGULAN CT FOUNDATION</td><td>SUMATERA UTARA</td></tr>
+  </tbody>
 </tbody></table>
