--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">Spesifikasi Teknis</h3>
+    <p class="card__title__right">26 Juni 2019</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>Telah ditambahkan informasi mengenai spesifikasi komputer peserta dan <i>grader</i> <a href="spesifikasi.html">di sini</a>.</p>
+  </div>
+</div>
+
+<div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">Selamat Datang</h3>
     <p class="card__title__right">25 Mei 2019</p>
   </div>
