wrap open osn announcement inside div

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@ layout: content-with-sidebar
 key: news
 ---
 
-<div class="pt-card card__title">
-  <h3 class="card__title__text">TOKI OSN Open Contest</h3>
-  <p class="card__title__right">26 Juni 2019</p>
-</div>
-<div class="pt-card card__content">
-  <p>Telah ditambahkan informasi mengenai TOKI OSN Open Contest <a href="terbuka.html">di sini</a>.</p>
-  <hr>
-  <p>Information regarding TOKI OSN Open Contest has been added <a href="open.html">here</a>.</p>
+<div>
+  <div class="pt-card card__title">
+    <h3 class="card__title__text">TOKI OSN Open Contest</h3>
+    <p class="card__title__right">26 Juni 2019</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>Telah ditambahkan informasi mengenai TOKI OSN Open Contest <a href="terbuka.html">di sini</a>.</p>
+    <hr>
+    <p>Information regarding TOKI OSN Open Contest has been added <a href="open.html">here</a>.</p>
+  </div>
 </div>
 
 <div>
