--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ key: news
     <p class="card__title__right">29 Juni 2019</p>
   </div>
   <div class="pt-card card__content">
-    <p>Telah ditambahkan <a href="jadwal.html">jadwal</a> dan buku panduan pelaksanaan OSN 2019 di <a href="terbuka.html">sini</a>.</p>
+    <p>Telah ditambahkan <a href="jadwal.html">jadwal</a> dan buku panduan pelaksanaan OSN 2019 di <a href="assets/files/panduan.pdf">sini</a>.</p>
   </div>
 </div>
 
