--- a/jadwal.html
+++ b/jadwal.html
@@ -49,15 +49,15 @@ key: schedule
 <tr><td>08.30-13.30</td><td> Kegiatan Tes Hari ke-2 </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
 <tr><td>13.30-14.30</td><td> Ishoma </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
 <tr><td>14.30-17.00</td><td> Penjelasan TOKI </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
-<tr><td>17.00-18.00</td><td> Kembali ke Best Western The Lagoon </td><td> Hotel </td></tr>
+<tr><td>17.00-18.00</td><td> Kembali ke Best Western The Lagoon Hotel </td></tr>
 <tr><td>18.00-19.30</td><td> Ishoma </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>19.30-21.00</td><td> Acara bebas </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>21.00-…</td><td> Istirahat </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 
 <tr bgcolor="#d3d3d3"><td colspan="4">5. Kamis, 4 Juli 2019</td></tr>
-<tr><td>06.00-08.00</td><td> Sarapan pagi </td><td> Hotel Best Western The Lagoon T-shirt OSN </td></tr>
-<tr><td>08.00-09.00</td><td> Persiapan Wisata Edukasi </td><td> Hotel Best Western The Lagoon T-shirt OSN </td></tr>
-<tr><td>09.00-14.00</td><td> Wisata Edukasi Kota Tomohon T-shirt OSN </td></tr>
+<tr><td>06.00-08.00</td><td> Sarapan pagi </td><td> Hotel Best Western The Lagoon </td><td> T-shirt OSN </td></tr>
+<tr><td>08.00-09.00</td><td> Persiapan Wisata Edukasi </td><td> Hotel Best Western The Lagoon </td><td> T-shirt OSN </td></tr>
+<tr><td>09.00-14.00</td><td> Wisata Edukasi </td><td> Kota Tomohon </td><td> T-shirt OSN </td></tr>
 <tr><td>14.00-15.00</td><td> Kembali ke Hotel </td></tr>
 <tr><td>15.00-18.00</td><td> Ishoma </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>18.00-18.30</td><td> Persiapan (menuju bus) </td><td> Hotel Best Western The Lagoon </td><td> Seragam sekolah </td></tr>
