--- a/jadwal.html
+++ b/jadwal.html
@@ -8,7 +8,7 @@ key: schedule
 
 <hr />
 
-<table class="pt-html-table pt-html-table-bordered">
+<table class="pt-html-table pt-html-table-bordered" border="1">
     <thead><tr><th width="110px">Waktu</th><th>Kegiatan</th><th width="165px">Tempat</th><th>Pakaian</th></tr></thead><tbody>
 
 
@@ -16,15 +16,15 @@ key: schedule
 <tr><td>12.00-21.00</td><td> Kedatangan dan Registrasi Bidang Informatika/Komputer </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 
 <tr bgcolor="#d3d3d3"><td colspan="4">2. Senin, 1 Juli 2019</td></tr>
-<tr><td>05.30-06.00</td><td> Sarapan pagi </td><td> Hotel Best Western The Lagoon </td></tr>
-<tr><td>06.00-06.30</td><td> Persiapan (menuju bus) </td><td> Hotel Best Western The Lagoon </td></tr>
-<tr><td>06.30-08.45</td><td> Menuju acara pembukaan </td></tr>
+<tr><td>05.30-06.00</td><td> Sarapan pagi </td><td> Hotel Best Western The Lagoon <td>&nbsp;</td> </td></tr>
+<tr><td>06.00-06.30</td><td> Persiapan (menuju bus) </td><td> Hotel Best Western The Lagoon </td> <td>&nbsp;</td> </tr>
+<tr><td>06.30-08.45</td><td> Menuju acara pembukaan </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 <tr><td>08.45-09.00</td><td> Persiapan Pembukaan </td><td> Grand Kawanua Conv. Hall </td><td> Seragam kontingen </td></tr>
 <tr><td>09.00-12.00</td><td> Acara Pembukaan </td><td> Grand Kawanua Conv. Hall </td><td> Seragam kontingen </td></tr>
 <tr><td>12.00-13.00</td><td> Menuju tempat tes </td><td> SMA Katolik Rex Mundi </td><td> Seragam kontingen </td></tr>
 <tr><td>13.00-13.30</td><td> Ishoma </td><td> SMA Katolik Rex Mundi </td><td> Seragam kontingen </td></tr>
 <tr><td>13.30-17.00</td><td> Pengarahan Teknis (Practise Session) </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
-<tr><td>17.00-17.30</td><td> Kembali ke Swiss-Belhotel Maleosan Manado </td></tr>
+<tr><td>17.00-17.30</td><td> Kembali ke Swiss-Belhotel Maleosan Manado </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 <tr><td>17.30-18.30</td><td> Ishoma </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>18.30-19.30</td><td> Makan malam </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>19.30-21.00</td><td> Belajar mandiri </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
@@ -32,7 +32,7 @@ key: schedule
 
 <tr bgcolor="#d3d3d3"><td colspan="4">3. Selasa, 2 Juli 2019</td></tr>
 <tr><td>06.00-07.00</td><td> Sarapan pagi </td><td> Hotel Best Western The Lagoon </td><td> Seragam sekolah </td></tr>
-<tr><td>07.00-07.30</td><td> Menuju tempat tes </td></tr>
+<tr><td>07.00-07.30</td><td> Menuju tempat tes </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 <tr><td>07.30-08.30</td><td> Persiapan Tes: Pengisian daftar hadir & Penjelasan </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
 <tr><td>08.30-13.30</td><td> Kegiatan Tes Hari ke-1 </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
 <tr><td>13.30-14.00</td><td> Kembali ke Hotel </td><td> Hotel Best Western The Lagoon </td><td> Seragam sekolah </td></tr>
@@ -44,12 +44,12 @@ key: schedule
 
 <tr bgcolor="#d3d3d3"><td colspan="4">4. Rabu, 3 Juli 2019</td></tr>
 <tr><td>06.00-07.00</td><td> Sarapan pagi </td><td> Hotel Best Western The Lagoon </td><td> Seragam sekolah </td></tr>
-<tr><td>07.00-07.30</td><td> Menuju tempat tes </td></tr>
+<tr><td>07.00-07.30</td><td> Menuju tempat tes </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 <tr><td>07.30-08.30</td><td> Persiapan Tes: Pengisian daftar hadir & Penjelasan </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
 <tr><td>08.30-13.30</td><td> Kegiatan Tes Hari ke-2 </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
 <tr><td>13.30-14.30</td><td> Ishoma </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
 <tr><td>14.30-17.00</td><td> Penjelasan TOKI </td><td> SMA Katolik Rex Mundi </td><td> Seragam sekolah </td></tr>
-<tr><td>17.00-18.00</td><td> Kembali ke Best Western The Lagoon Hotel </td></tr>
+<tr><td>17.00-18.00</td><td> Kembali ke Best Western The Lagoon Hotel </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 <tr><td>18.00-19.30</td><td> Ishoma </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>19.30-21.00</td><td> Acara bebas </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>21.00-…</td><td> Istirahat </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
@@ -58,13 +58,13 @@ key: schedule
 <tr><td>06.00-08.00</td><td> Sarapan pagi </td><td> Hotel Best Western The Lagoon </td><td> T-shirt OSN </td></tr>
 <tr><td>08.00-09.00</td><td> Persiapan Wisata Edukasi </td><td> Hotel Best Western The Lagoon </td><td> T-shirt OSN </td></tr>
 <tr><td>09.00-14.00</td><td> Wisata Edukasi </td><td> Kota Tomohon </td><td> T-shirt OSN </td></tr>
-<tr><td>14.00-15.00</td><td> Kembali ke Hotel </td></tr>
+<tr><td>14.00-15.00</td><td> Kembali ke Hotel </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 <tr><td>15.00-18.00</td><td> Ishoma </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>18.00-18.30</td><td> Persiapan (menuju bus) </td><td> Hotel Best Western The Lagoon </td><td> Seragam sekolah </td></tr>
-<tr><td>18.30-19.00</td><td> Menuju Pendidikan Karakter </td></tr>
+<tr><td>18.30-19.00</td><td> Menuju Pendidikan Karakter </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 <tr><td>19.00-19.30</td><td> Persiapan Pendidikan Karakter Ballroom </td><td> Hotel Swissbel </td><td> Seragam sekolah </td></tr>
 <tr><td>19.30-21.30</td><td> Pendidikan Karakter Ballroom </td><td> Hotel Swissbel </td><td> Seragam sekolah </td></tr>
-<tr><td>21.30-22.00</td><td> Kembali ke Hotel </td></tr>
+<tr><td>21.30-22.00</td><td> Kembali ke Hotel </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 <tr><td>22.00-…</td><td> Istirahat </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 
 <tr bgcolor="#d3d3d3"><td colspan="4">6. Jum’at, 5 Juli 2019</td></tr>
@@ -73,16 +73,16 @@ key: schedule
 <tr><td>11.30-13.00</td><td> Shalat Jum’at (bagi yang beragama Islam) </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>13.00-14.00</td><td> Istirahat dan Makan Siang </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>14.00-16.00</td><td> Lanjutan acara bebas </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
-<tr><td>16.00-16.30</td><td> Persiapan (menuju bus) </td><td> Hotel Best Western The Lagoon </td><td> Pakaian Kontingen/daerah </td></tr>
-<tr><td>16.30-17.30</td><td> Menuju Acara Penutupan </td><td> Pakaian Kontingen/daerah </td></tr>
-<tr><td>17.30-18.30</td><td> Ishoma </td><td> Gedung Mapalus Kantor Gubernur Sulawesi Utara </td><td> Pakaian Kontingen/daerah </td></tr>
+<tr><td>16.00-16.30</td><td> Persiapan (menuju bus) </td><td> Hotel Best Western The Lagoon </td><td> Pakaian kontingen/daerah </td></tr>
+<tr><td>16.30-17.30</td><td> Menuju Acara Penutupan </td> <td>&nbsp;</td> <td> Pakaian kontingen/daerah </td></tr>
+<tr><td>17.30-18.30</td><td> Ishoma </td><td> Gedung Mapalus Kantor Gubernur Sulawesi Utara </td><td> Pakaian kontingen/daerah </td></tr>
 <tr><td>18.30-19.00</td><td> Persiapan Acara Penutupan </td><td> Gedung Mapalus Kantor Gubernur Sulawesi Utara </td><td> Pakaian kontingen/daerah </td></tr>
 <tr><td>19.00-22.00</td><td> Acara Penutupan </td><td> Gedung Mapalus Kantor Gubernur Sulawesi Utara </td><td> Pakaian kontingen/daerah </td></tr>
-<tr><td>22.00-22.30</td><td> Kembali ke Hotel </td></tr>
+<tr><td>22.00-22.30</td><td> Kembali ke Hotel </td> <td>&nbsp;</td> <td>&nbsp;</td></tr>
 <tr><td>22.30-…</td><td> Istirahat </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 
 <tr bgcolor="#d3d3d3"><td colspan="4">7. Sabtu, 6 Juli 2019</td></tr>
 <tr><td>06.00-08.00</td><td> Sarapan pagi </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
-<tr><td>08.00-12.00</td><td> Check Out, Peserta kembali ke daerah masing-masing. </td></tr>
+<tr><td>08.00-12.00</td><td> Check Out, Peserta kembali ke daerah masing-masing. </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 
 </tbody></table>
