Remove table border

--- a/jadwal.html
+++ b/jadwal.html
@@ -8,7 +8,7 @@ key: schedule
 
 <hr />
 
-<table class="pt-html-table pt-html-table-bordered" border="1">
+<table class="pt-html-table pt-html-table-bordered">
     <thead><tr><th width="110px">Waktu</th><th>Kegiatan</th><th width="165px">Tempat</th><th>Pakaian</th></tr></thead><tbody>
 
 
