Move 'ballroom' to correct column

--- a/jadwal.html
+++ b/jadwal.html
@@ -62,8 +62,8 @@ key: schedule
 <tr><td>15.00-18.00</td><td> Ishoma </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 <tr><td>18.00-18.30</td><td> Persiapan (menuju bus) </td><td> Hotel Best Western The Lagoon </td><td> Seragam sekolah </td></tr>
 <tr><td>18.30-19.00</td><td> Menuju Pendidikan Karakter </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
-<tr><td>19.00-19.30</td><td> Persiapan Pendidikan Karakter Ballroom </td><td> Hotel Swissbel </td><td> Seragam sekolah </td></tr>
-<tr><td>19.30-21.30</td><td> Pendidikan Karakter Ballroom </td><td> Hotel Swissbel </td><td> Seragam sekolah </td></tr>
+<tr><td>19.00-19.30</td><td> Persiapan Pendidikan Karakter </td><td> Ballroom Hotel Swissbel </td><td> Seragam sekolah </td></tr>
+<tr><td>19.30-21.30</td><td> Pendidikan Karakter </td><td> Ballroom Hotel Swissbel </td><td> Seragam sekolah </td></tr>
 <tr><td>21.30-22.00</td><td> Kembali ke Hotel </td> <td>&nbsp;</td> <td>&nbsp;</td> </tr>
 <tr><td>22.00-…</td><td> Istirahat </td><td> Hotel Best Western The Lagoon </td><td> Bebas dan sopan </td></tr>
 
