--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">Tabel Peringkat</h3>
+    <p class="card__title__right">1 Juli 2019</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>Tabel peringkat sementara untuk Hari 0, 1, dan 2 dapat diakses <a href="hasil">di sini</a>.</p>
+  </div>
+</div>
+
+<div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">Jadwal dan Panduan Kegiatan</h3>
     <p class="card__title__right">29 Juni 2019</p>
   </div>
