Add hours to day 0 scoreboard

--- a/hasil.html
+++ b/hasil.html
@@ -18,7 +18,7 @@ key: results
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h4>Hari 0: 1 Juli 2019</h4>
+      <h4>Hari 0: 1 Juli 2019, 15.02 - 17.02 WITA</h4>
       <p>
         <strong><u>Ini adalah hasil sesi uji coba yang tidak mempengaruhi penilaian akhir.</u></strong>
       </p>
