--- a/hasil.html
+++ b/hasil.html
@@ -18,9 +18,9 @@ key: results
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h4>Hari 0: 1 Juli 2019, 15.02 - 17.02 WITA</h4>
+      <h4>Hari 1: 2 Juli 2019</h4>
       <p>
-        <strong><u>Ini adalah hasil sesi uji coba yang tidak mempengaruhi penilaian akhir.</u></strong>
+        <strong><u>BUKAN HASIL AKHIR: Hanya ditampilkan hasil 4 jam pertama.</u></strong>
       </p>
       <p id="last-update-info">
         <small> Terakhir diperbarui: <span id="lastUpdateTime"></span> </small>
