Add hours to day 1 scoreboard

--- a/hasil.html
+++ b/hasil.html
@@ -18,10 +18,10 @@ key: results
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h4>Hari 1: 2 Juli 2019</h4>
-      <p>
+      <h4>Hari 1: 2 Juli 2019, 08.15 - 13.15 WITA</h4>
+      <strong>
         <strong><u>BUKAN HASIL AKHIR: Hanya ditampilkan hasil 4 jam pertama.</u></strong>
-      </p>
+      </strong>
       <p id="last-update-info">
         <small> Terakhir diperbarui: <span id="lastUpdateTime"></span> </small>
       </p>
