--- a/hasil.html
+++ b/hasil.html
@@ -19,11 +19,14 @@ key: results
   <div class="row">
     <div class="col-md-12">
       <h4>Hari 1: 2 Juli 2019, 08.15 - 13.15 WITA</h4>
-      <strong>
-        <strong><u>BUKAN HASIL AKHIR: Hanya ditampilkan hasil 4 jam pertama.</u></strong>
-      </strong>
-      <p id="last-update-info">
-        <small> Terakhir diperbarui: <span id="lastUpdateTime"></span> </small>
+      <p>
+        <strong>
+          <strong
+            ><u
+              >BUKAN HASIL AKHIR: Hanya ditampilkan hasil 4 jam pertama.</u
+            ></strong
+          >
+        </strong>
       </p>
 
       <table class="table table-striped table-bordered">
