Set up day 2 scoreboard

--- a/hasil.html
+++ b/hasil.html
@@ -18,15 +18,18 @@ key: results
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h4>Hari 1: 2 Juli 2019, 08.15 - 13.15 WITA</h4>
+      <h4>Hari 2: 3 Juli 2019, 08.00 - 13.00 WITA</h4>
       <p>
         <strong>
           <strong
             ><u
-              >BUKAN HASIL AKHIR: Hanya ditampilkan hasil 4 jam pertama.</u
+              >BUKAN HASIL AKHIR: Hanya ditampilkan hasil 4 jam pertama setiap harinya.</u
             ></strong
           >
         </strong>
+      </p>
+      <p id="last-update-info">
+        <small> Terakhir diperbarui: <span id="lastUpdateTime"></span></small>
       </p>
 
       <table class="table table-striped table-bordered">
