--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">Problem Repository</h3>
+    <p class="card__title__right">22 Juli 2019</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>Repositori soal OSN 2019 sudah tersedia <a href="https://github.com/ia-toki/osn-2019">di sini</a>.</p>
+    <hr>
+    <p>OSN 2019 problem repository is available <a href="https://github.com/ia-toki/osn-2019">here</a>.</p>
+  </div>
+</div>
+
+<div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">Tabel Peringkat</h3>
     <p class="card__title__right">1 Juli 2019</p>
   </div>
