Add a note about problem analysis in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ key: news
     <p class="card__title__right">22 Juli 2019</p>
   </div>
   <div class="pt-card card__content">
-    <p>Repositori soal OSN 2019 sudah tersedia <a href="https://github.com/ia-toki/osn-2019">di sini</a>.</p>
+    <p>Repositori soal (termasuk pembahasan dalam Bahasa Indonesia) OSN 2019 sudah tersedia <a href="https://github.com/ia-toki/osn-2019">di sini</a>.</p>
     <hr>
     <p>OSN 2019 problem repository is available <a href="https://github.com/ia-toki/osn-2019">here</a>.</p>
   </div>
